# openclaw-desktop

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ENTERPRISE_CUSTOMIZATION_GUIDE.md  LICENSE  README.en.md  README.md  TECH_DECISIONS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: release.yml
scripts/: build-windows.sh  generate-updater-manifest.mjs  prepare-openclaw-bundle.mjs  test-offline-local-codex-ui.mjs  test-windows-portable-install.mjs
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bundle/resources/: README.md  enterprise-skills.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/bridge/: openclawBridge.ts  types.ts
src/data/: llm-presets.ts
src/features/bootstrap/: Bootstrap.tsx
src/features/onboarding/: Onboarding.tsx
src/features/onboarding/components/: ChannelConfig.tsx  LlmProviderSelect.tsx  SkillSelector.tsx
src/features/shell/: Shell.tsx
src/features/updater/: UpdaterWidget.tsx
src/i18n/: index.ts  resources.ts
src/services/: llm-test.ts
src/styles/: enterprise.css
src/types/: channels.ts
src/utils/: validation.ts
