[package]
name = "openclaw-desktop"

version = "0.1.37"
description = "openclaw-desktop native shell"
authors = ["openclaw-desktop Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
base64 = "0.22"
json5 = "0.4"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-process = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
